@@ -27,6 +27,10 @@
    - djm@cvs.openbsd.org 2004/05/09 01:26:48
      [kex.c]
      don't overwrite what we are trying to compute
+   - deraadt@cvs.openbsd.org 2004/05/11 19:01:43
+     [auth.c auth2-none.c authfile.c channels.c monitor.c monitor_mm.c
+     packet.c packet.h progressmeter.c session.c openbsd-compat/xmmap.c]
+     improve some code lint did not like; djm millert ok
 
 20040502
  - (dtucker) OpenBSD CVS Sync
@@ -1103,4 +1107,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3349 2004/05/13 06:31:48 dtucker Exp $
+$Id: ChangeLog,v 1.3350 2004/05/13 06:39:33 dtucker Exp $
